--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_URI = mongodb://localhost/bookStoreDB
+MONGO_URI = 'mongodb+srv://zeiadmagdy2019:zeiadmagdy1@cluster0.orqcs.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0'
 PORT = 3000
 NODE_ENV = development
+JWT_SECRET_KEY = secretKey123123
