--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "angular-node-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app"
+    "start": "node app.js" 
   },
   "author": "zeiad magdy",
   "license": "ISC",
